# nupho

./: .gitignore  README.md  main.py  pyproject.toml
assets/: closure_operation.json
data/: camera_label2id.json  closure_label2id.json  dataset.jsonl  domain2id.json  feedback.jsonl  test_set.jsonl
docs/: android-integration.md
src/: evaluate.py  export_camera_onnx.py  export_onnx.py  predict.py  predict_camera.py  predict_camera_onnx.py  predict_onnx.py  train_camera_classifier.py  train_classifier.py  web_app.py
src/templates/: index.html
