[project]
name = "nupho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.1.0",
    "datasets>=2.19.1",
    "numpy>=2.4.3",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxscript>=0.7.0",
    "peft>=0.14.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "tqdm>=4.66.5",
    "transformers>=5.8.0",
    "flask>=3.0.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
